Creado mediante Colaboratory

--- a/Practica_Human_Stress.ipynb
+++ b/Practica_Human_Stress.ipynb
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "6RkGKGN3Jlhh"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "ojFyNT0HKVxH"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -147,9 +147,9 @@
           "height": 206
         },
         "id": "Ik2ZK0j9MDEi",
-        "outputId": "7ef22fe3-768f-4382-b670-3c2093ea79b3"
+        "outputId": "d9097e46-d01b-45ca-a533-a4031f785dbf"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,11 +160,11 @@
               "1     21.41        90.41        93.0             1\n",
               "2     27.12        96.12       196.0             2\n",
               "3     27.64        96.64       177.0             2\n",
-              "5     11.31        80.31        40.0             0"
+              "4       NaN        79.87        87.0             0"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a9158173-b714-40c2-871a-bf36d685be51\">\n",
+              "  <div id=\"df-859ca0b4-fcbd-44e7-bd69-0c4e980e8a75\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -220,16 +220,16 @@
               "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>11.31</td>\n",
-              "      <td>80.31</td>\n",
-              "      <td>40.0</td>\n",
+              "      <th>4</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>79.87</td>\n",
+              "      <td>87.0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9158173-b714-40c2-871a-bf36d685be51')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-859ca0b4-fcbd-44e7-bd69-0c4e980e8a75')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -280,12 +280,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a9158173-b714-40c2-871a-bf36d685be51 button.colab-df-convert');\n",
+              "          document.querySelector('#df-859ca0b4-fcbd-44e7-bd69-0c4e980e8a75 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a9158173-b714-40c2-871a-bf36d685be51');\n",
+              "          const element = document.querySelector('#df-859ca0b4-fcbd-44e7-bd69-0c4e980e8a75');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -308,35 +308,78 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 4
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Colocamos \n",
-        "stress=stress.fillna(0)\n"
+        "# Revisando los valores del dataframe\n",
+        "stress.describe"
+      ],
+      "metadata": {
+        "id": "RJQd-Wd1kPez",
+        "outputId": "dc3456ab-f84c-49a5-f0d3-bd95da8726cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method NDFrame.describe of       Humidity  Temperature  Step count  Stress Level\n",
+              "0        21.33        90.33       123.0             1\n",
+              "1        21.41        90.41        93.0             1\n",
+              "2        27.12        96.12       196.0             2\n",
+              "3        27.64        96.64       177.0             2\n",
+              "4          NaN        79.87        87.0             0\n",
+              "...        ...          ...         ...           ...\n",
+              "1996     21.82        90.82        96.0             1\n",
+              "1997     10.45        79.45        45.0             0\n",
+              "1998     27.22        96.22       135.0             2\n",
+              "1999     12.46        81.46        64.0             0\n",
+              "2000     16.87        85.87        50.0             1\n",
+              "\n",
+              "[2001 rows x 4 columns]>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reemplazamos los valores NaN a 0 del dataframe\n",
+        "stress=stress.fillna(0)\n",
+        "print('\\n=== Nuevo DataFrame ===\\n', stress)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rgUDAM7xH_I_",
-        "outputId": "198cea95-0610-44e8-91fd-fdf1a87221ae"
+        "outputId": "07118d4d-735b-4523-f1f0-c9428cb9c6c4"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "      Humidity  Temperature  Step count  Stress Level\n",
+            "\n",
+            "=== Nuevo DataFrame ===\n",
+            "       Humidity  Temperature  Step count  Stress Level\n",
             "0        21.33        90.33       123.0             1\n",
             "1        21.41        90.41        93.0             1\n",
             "2        27.12        96.12       196.0             2\n",
             "3        27.64        96.64       177.0             2\n",
-            "5        11.31        80.31        40.0             0\n",
+            "4         0.00        79.87        87.0             0\n",
             "...        ...          ...         ...           ...\n",
             "1996     21.82        90.82        96.0             1\n",
             "1997     10.45        79.45        45.0             0\n",
@@ -344,7 +387,7 @@
             "1999     12.46        81.46        64.0             0\n",
             "2000     16.87        85.87        50.0             1\n",
             "\n",
-            "[1950 rows x 4 columns]\n"
+            "[2001 rows x 4 columns]\n"
           ]
         }
       ]
@@ -352,7 +395,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Cantidad de datos que tiene\n",
+        "#Cantidad filas y columnas que contiene el dataframe\n",
         "stress.shape"
       ],
       "metadata": {
@@ -360,19 +403,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "av4WcjBIMQAt",
-        "outputId": "6f98d41b-5fa7-4ee7-95c2-2cb0f6842d4d"
+        "outputId": "27101995-6443-4a3c-fb12-583db86e527d"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(1950, 4)"
+              "(2001, 4)"
             ]
           },
           "metadata": {},
-          "execution_count": 75
+          "execution_count": 11
         }
       ]
     },
@@ -387,26 +430,53 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kd3hqcyMMw6z",
-        "outputId": "bcbc5db7-c465-46a1-bc1a-98d75799f890"
+        "outputId": "0fe7b51a-e11c-42f6-d196-20aa7b8d8df6"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Int64Index: 1950 entries, 0 to 2000\n",
+            "RangeIndex: 2001 entries, 0 to 2000\n",
             "Data columns (total 4 columns):\n",
             " #   Column        Non-Null Count  Dtype  \n",
             "---  ------        --------------  -----  \n",
-            " 0   Humidity      1950 non-null   float64\n",
-            " 1   Temperature   1950 non-null   float64\n",
-            " 2   Step count    1950 non-null   float64\n",
-            " 3   Stress Level  1950 non-null   int64  \n",
+            " 0   Humidity      2001 non-null   float64\n",
+            " 1   Temperature   2001 non-null   float64\n",
+            " 2   Step count    2001 non-null   float64\n",
+            " 3   Stress Level  2001 non-null   int64  \n",
             "dtypes: float64(3), int64(1)\n",
-            "memory usage: 76.2 KB\n"
+            "memory usage: 62.7 KB\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Verificar cuantas clases tiene el dataframe\n",
+        "stress['Stress Level'].unique()"
+      ],
+      "metadata": {
+        "id": "wfdT3Burlgf1",
+        "outputId": "9b0bdcd1-c71a-4ced-b06f-5420e756b409",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     },
@@ -420,9 +490,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d3Kj9IA8naHT",
-        "outputId": "61c62e1f-1e15-4d03-b36c-7a96d3bb7aa1"
+        "outputId": "569f9545-7718-4928-c721-21747b4666d6"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +506,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 16
         }
       ]
     },
