Creado mediante Colaboratory

--- a/Practica_Human_Stress.ipynb
+++ b/Practica_Human_Stress.ipynb
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "6RkGKGN3Jlhh"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "ojFyNT0HKVxH"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
         "id": "Ik2ZK0j9MDEi",
         "outputId": "d9097e46-d01b-45ca-a533-a4031f785dbf"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,6 +313,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "2.2 Verificamos si los valores del dataframe"
+      ],
+      "metadata": {
+        "id": "ToyHVKSQnlqJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Revisando los valores del dataframe\n",
@@ -325,7 +334,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +375,7 @@
         "id": "rgUDAM7xH_I_",
         "outputId": "07118d4d-735b-4523-f1f0-c9428cb9c6c4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +414,7 @@
         "id": "av4WcjBIMQAt",
         "outputId": "27101995-6443-4a3c-fb12-583db86e527d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +441,7 @@
         "id": "Kd3hqcyMMw6z",
         "outputId": "0fe7b51a-e11c-42f6-d196-20aa7b8d8df6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,12 +470,12 @@
       ],
       "metadata": {
         "id": "wfdT3Burlgf1",
-        "outputId": "9b0bdcd1-c71a-4ced-b06f-5420e756b409",
+        "outputId": "5ff7eeae-febb-4aec-a4d7-d4f873deceb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +485,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 17
         }
       ]
     },
@@ -490,9 +499,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d3Kj9IA8naHT",
-        "outputId": "569f9545-7718-4928-c721-21747b4666d6"
+        "outputId": "aef0a10c-eb51-47b4-b11b-16e543079e07"
       },
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,14 +515,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 18
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#columnas\n",
+        "#Cantidad de columnas en el dataframe\n",
         "stress.columns"
       ],
       "metadata": {
@@ -521,9 +530,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fsEIFq2pYvge",
-        "outputId": "1f85a9d8-9915-4d22-8538-bb80b551df1d"
+        "outputId": "17cbccf0-2293-413b-9acc-f3e6ea3174dd"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +542,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 19
         }
       ]
     },
