Creado mediante Colaboratory

--- a/Practica_Human_Stress.ipynb
+++ b/Practica_Human_Stress.ipynb
@@ -92,26 +92,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Sección nueva"
-      ],
-      "metadata": {
-        "id": "zrA8ga_yrXqf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "PRACTICA 2\n",
-        "\n",
-        "1. Importacion de las librerias"
-      ],
-      "metadata": {
-        "id": "svGcc2W0myw0"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# 1.- Importacion de las librerias"
       ],
       "metadata": {
@@ -130,7 +110,7 @@
       "metadata": {
         "id": "6RkGKGN3Jlhh"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +121,7 @@
       "metadata": {
         "id": "ojFyNT0HKVxH"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -175,7 +155,7 @@
         "id": "Ik2ZK0j9MDEi",
         "outputId": "613694fc-3d6d-4f03-a777-ee8cf67b921e"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +340,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +380,7 @@
           "height": 175
         }
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +575,7 @@
         "id": "rgUDAM7xH_I_",
         "outputId": "5bc219ad-d9ed-4409-d2a0-e220d12d505c"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,7 +614,7 @@
         "id": "av4WcjBIMQAt",
         "outputId": "8574443b-c46a-4315-f4a3-359e664d5204"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -661,7 +641,7 @@
         "id": "Kd3hqcyMMw6z",
         "outputId": "be186338-33fd-4c16-eed9-8f71e94deaac"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -695,7 +675,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -722,7 +702,7 @@
         "id": "d3Kj9IA8naHT",
         "outputId": "ee5723f1-97bd-4ef8-c1ce-f2045525f1f6"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +733,7 @@
         "id": "fsEIFq2pYvge",
         "outputId": "c3b79ed0-57e0-4dfd-bde5-95e4a1944662"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -781,7 +761,7 @@
         "id": "YFai223vHbwh",
         "outputId": "4a7948a3-db8d-41d4-954f-2a0f74c8dce7"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -989,7 +969,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +994,7 @@
       "metadata": {
         "id": "NYhemZu5pjjs"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1030,7 +1010,7 @@
           "height": 283
         }
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1079,7 +1059,7 @@
         "id": "C0gr4Nz_Y_Y9",
         "outputId": "ca51e726-6236-496f-bbf1-6faa26aa1c2e"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1126,7 +1106,7 @@
         "id": "cdGOZhx3ZsJw",
         "outputId": "020c83f4-ee8b-4b7a-9e11-2a2685281524"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1173,7 +1153,7 @@
         "id": "f9vhd8B6Z3hQ",
         "outputId": "966b16ce-8039-46b7-f914-b1053c4c3613"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,7 +1200,7 @@
         "id": "a_n1f3NbaS7h",
         "outputId": "288d617a-581b-4cc9-93cd-120748ef7a07"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1242,7 @@
       "metadata": {
         "id": "6pvUo_MurkgF"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1279,7 +1259,7 @@
         "id": "hcO-2qVhsmtF",
         "outputId": "6e6b2230-1ae1-4091-a8fa-1c8eaca3d5d4"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1320,7 +1300,7 @@
           "height": 885
         }
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1359,7 +1339,7 @@
         },
         "outputId": "790b996e-090a-45a5-bf53-2679df2de7a6"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1398,7 +1378,7 @@
         "id": "0IYyFUoXddq9",
         "outputId": "ef626970-6f22-4a61-9c2f-b7f176242943"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1437,7 +1417,7 @@
         "id": "_QgUpua7d7CA",
         "outputId": "dd9e318d-1d94-4094-d3f8-e32191e8ce7f"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1476,7 +1456,7 @@
         "id": "zT_gEYVIeLrs",
         "outputId": "1d8b8caf-7ccd-4abf-c54b-21206bceb6e0"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1515,7 +1495,7 @@
         "id": "QxJtYZB_ibG1",
         "outputId": "7584711b-c7a0-43bc-d0e0-cdf8769354cf"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1540,7 +1520,7 @@
       "metadata": {
         "id": "NM1a_YmXiMMu"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1553,7 +1533,7 @@
       "metadata": {
         "id": "qZYkYE9bir84"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1571,7 +1551,7 @@
       "metadata": {
         "id": "ksyvFzlgn7Sk"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1606,7 +1586,7 @@
         "id": "QyYSkycSrgTn",
         "outputId": "b0fea965-1c68-404d-d213-4dbc74280c73"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1634,7 +1614,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1646,6 +1626,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#3.2 Prueba con el modelo SVC"
+      ],
+      "metadata": {
+        "id": "8Nk1tqbFT1ua"
+      }
     },
     {
       "cell_type": "code",
@@ -1690,7 +1679,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1702,6 +1691,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3.3 Prueba con el modelo Gausianno"
+      ],
+      "metadata": {
+        "id": "fw76FU1jUBYB"
+      }
     },
     {
       "cell_type": "code",
@@ -1717,7 +1715,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1745,7 +1743,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1759,9 +1757,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# CONCLUSION: SE REALIZO EL ENTRENAMIENTO CON LOS 3 TIPOS DE MODELOS,\n",
+        "#    KNeighborsClassifier: \n",
+        "#         Train score:  0.99375\n",
+        "#         Validacion score:  0.9771309771309772\n",
+        "#         Test score:  0.98\n",
+        "#    SVC: \n",
+        "#         Train score:  0.3919642857142857\n",
+        "#         Validacion score:  0.38253638253638256\n",
+        "#         Test score:  0.415\n",
+        "#   GAUSSIANO:\n",
+        "#       Train score:  0.8973214285714286\n",
+        "#       Validacion score:  0.920997920997921\n",
+        "#       Test score:  0.895\n",
+        "#      -------------------------------\n",
+        "        # EL MEJOR RESULTADO SE OBTUVO CON EL MODELO KNeighborsClassifier\n",
+        "        # POR SER EL MAS PROXIMO AL 100%"
+      ],
+      "metadata": {
+        "id": "LNzfwmnPSxg8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "# 4.- Seleccion y evaluacion del Modelo"
+        "# 4.- Seleccion del Modelo"
       ],
       "metadata": {
         "id": "p86yDMPitdxt"
@@ -1782,7 +1806,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1804,7 +1828,7 @@
       "metadata": {
         "id": "EsTcBcbzC2zv"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1821,7 +1845,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1866,7 +1890,7 @@
       "metadata": {
         "id": "V4SIERa5IMWM"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1887,7 +1911,7 @@
           "height": 422
         }
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
